fix(styles): contrast on trivia buttons and wordle
The contrast between the text and the background on the text of trivia buttons
and cells of the wordle wasn't appropiate (white text on black background). So I made this little change.
I tried with #6c63ff which is the accent color of the app but I thought it was too bright.

--- a/src/games/GamesComponent.css
+++ b/src/games/GamesComponent.css
@@ -3,6 +3,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  color: #333;
   padding: var(--separation);
   display: flex;
   justify-content: center;
